--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:@localhost:5432/SE-Laboratary
+URL_DATABASE=postgresql://postgres:1212312121@localhost:5432/SE-Laboratory
