--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 URL_DATABASE=postgresql://postgres:1212312121@localhost:5432/SE-Laboratory
+URL_DATABASE_TEST=postgresql://postgres:1212312121@localhost:5432/SE-Laboratory-Test
