--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,6 @@
-URL_DATABASE=postgresql://postgres:024220852@localhost:5432/SE-Laboratory
+URL_DATABASE=postgresql://postgres:1212312121@localhost:5432/SE-Laboratory
 
+FRONT_END_ORIGIN = http://localhost:3000
 
 ALGORITHM=HS256
 SECRET_KEY=kjbfkjbnlrunos8g4p30ng303nri
