--- a/app/.env
+++ b/app/.env
@@ -1,7 +1,7 @@
 URL_DATABASE=postgresql://postgres:1212312121@localhost:5432/SE-Laboratory
 
-FRONT_END_ORIGIN = http://localhost:3000
-BACK_END_ORIGIN = http://localhost:8000
+FRONT_END_ORIGIN = http://localhost:3000/
+BACK_END_ORIGIN = http://localhost:8000/
 
 ALGORITHM=HS256
 SECRET_KEY=kjbfkjbnlrunos8g4p30ng303nri
