--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,7 @@
-URL_DATABASE=postgresql://postgres:024220852@localhost:5432/SE-Laboratory
+URL_DATABASE=postgresql://postgres:1212312121@localhost:5432/SE-Laboratory
 
-FRONT_END_ORIGIN = http://localhost:3000
+FRONT_END_ORIGIN = http://localhost:3000/
+BACK_END_ORIGIN = http://localhost:8000/
 
 ALGORITHM=HS256
 SECRET_KEY=kjbfkjbnlrunos8g4p30ng303nri
@@ -8,10 +9,10 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 
 INITIAL_ADMIN_EMAIL=admintest123@gmail.com
-INITIAL_ADMIN_PASSWORD=024220852
+INITIAL_ADMIN_PASSWORD=1212312121
 
 INITIAL_LEAD_RESEARCHER_EMAIL=leadresearchertest123@gmail.com
-INITIAL_LEAD_RESEARCHER_PASSWORD=024220852
+INITIAL_LEAD_RESEARCHER_PASSWORD=1212312121
 
 INITIAL_RESEARCHER_EMAIL=researchertest123@gmail.com
-INITIAL_RESEARCHER_PASSWORD=024220852
+INITIAL_RESEARCHER_PASSWORD=1212312121
