--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -34,7 +34,7 @@ mdurl==0.1.2
 sqlmodel==0.0.22
 SQLAlchemy==2.0.35
 greenlet==3.1.1
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 jose==1.0.0
 cffi==1.17.1
 cryptography==43.0.1
