--- a/frontend/Dockerfile.frontend
+++ b/frontend/Dockerfile.frontend
@@ -1,18 +1,16 @@
 FROM node:16
 
-WORKDIR /app
-
-# Copy package files from root
-COPY package*.json ./
+WORKDIR /usr/src/app
 
 # Install dependencies
+COPY package*.json ./
 RUN npm install
 
-# Copy all frontend-related files
+# Copy application code
 COPY . .
 
 # Define environment variable
-ENV REACT_APP_BACKEND_URL=http://localhost:8000
+ENV REACT_APP_BACKEND_URL=http://0.0.0.0:8000
 
 EXPOSE 3000
 
